# Cartesian-Impedance-Controller

./: CMakeLists.txt  README.md
cartesian_impedance_controller_handles/: CMakeLists.txt  cartesian_impedance_controller_handles_plugin.xml  package.xml
cartesian_impedance_controller_handles/include/cartesian_impedance_controller_handles/: MotionControlHandle.h  MotionControlHandle.hpp
cartesian_impedance_controller_handles/src/: cartesian_impedance_controller_handles.cpp
cfg/: friction.cfg  lugre_friction.cfg  stiffness.cfg
include/cartesian_impedance_controller/: cartesian_impedance_controller.h  cartesian_impedance_controller_ros.h  cartesian_impedance_controller_ros.hpp  coulomb_viscous_friction_model.h  friction_model.h  lugre_friction_model.h
res/config/: ur5e_example_controller.yaml  ur5e_example_friction_params.yaml  ur5e_example_lugre_friction_params.yaml  usage_example.md
res/launch/: ur5e_examples.launch
src/: cartesian_impedance_controller.cpp  cartesian_impedance_controller_ros.cpp  coulomb_viscous_friction_model.cpp  lugre_friction_model.cpp
